--- a/Terceiro Desafio/Styles/home.css
+++ b/Terceiro Desafio/Styles/home.css
@@ -140,6 +140,7 @@ body{
 
 .principal__conteudo__redes .principal__conteudo__redes__subtexto{
     font-size: 1.3rem;
+    color: white;
 }
 
 .principal__conteudo__redes .principal__conteudo__redes__link{
